Fixing responsive layout issues

--- a/src/site/css/styles.css
+++ b/src/site/css/styles.css
@@ -792,7 +792,7 @@ li.current a {
     color: #000;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    line-height: 120%;
+    line-height: 320px;
 }
 
 .features h2, .main-features h2 {
